# haute

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  TECH_STACK.md  TEST_AUDIT_PLAN.md  WTW_RADAR_REPORT copy.md  alteryx-style.md  bug_report.md  bug_report_cloudpickle_serving.md  bug_report_databricks_tracking.md  bug_report_serving_endpoint.md  coverage.json  hatch_build.py  haute.toml  ideas.md  main.haute.json  main.py  mkdocs.yml  optimisation_design.md  optimisation_report.md  pyproject.toml  runw.toml
.claude/: plan.md  settings.local.json
.github/workflows/: ci.yml  docs.yml
config/api_input/: quotes.json
config/data_sink/: conversion_sink.json
config/data_source/: batch_quotes.json  competitor_insights.json  policy_data.json  quoted_premiums.json
config/datasource/: batch_quotes.json  claims.json  competitor_insights.json  exposure.json
config/expander/: premium.json
config/external_model/: frequency_model.json  severity_model.json
config/factors/: optimiser_banding.json
config/live_switch/: policies.json
config/model_score/: Model_Score_19.json  competitor_scoring.json
config/model_scoring/: competitor_scoring.json  conversion_scoring.json
config/model_training/: Model_Training_11.json  avg_top_5.json  avg_top_5_glm.json  conversion.json
config/modelling/: Model_Training_17.json  avg_top_5.json
config/optimiser/: online_optimisation.json  ratebook_optimisation.json
config/optimiser_apply/: apply_online.json  apply_ratebook.json
config/quote_input/: quotes.json
config/scenario_expander/: price_scenarios.json
config/sink/: flattened_json.json  frequency_write.json  severity_write.json
config/source_switch/: policies.json
config/tables/: Rating_Step_16.json
data/: IDpol_1052049.json  claims_amounts.parquet  policies.parquet  sample_quote.json
docs/: ARCHITECTURE.md  BANDING_DESIGN.md  CODE_GUI_SYNC.md  COMMIT_STANDARDS.md  CONFIG_SIDECAR_DESIGN.md  DATABRICKS_SETUP.md  DEPLOY_DESIGN.md  DEPLOY_STRATEGY.md  EXECUTION_TRACE_DESIGN.md  FRONTIER_PLAN.md  GLM_INTEGRATION_DESIGN.md  IMPLEMENTATION_PLAN.md  PARQUET_GRID_PIPELINE.md  RATING_STEP_DESIGN.md  SUBMODEL_DESIGN.md  index.md
docs/building-models/: index.md
docs/deployment/: before-you-start.md  index.md
docs/deployment/ci/: azure-devops.md  github-actions.md  gitlab.md
docs/deployment/targets/: aws.md  azure.md  databricks.md  docker.md
docs/getting-started/: environment.md  index.md  installing-haute.md
docs/overrides/: home.html
docs/stylesheets/: extra.css
examples/: area_pricing.py  my_pipeline.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/__tests__/: App.test.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BreadcrumbBar.tsx  BreakdownDropdown.tsx  CacheFetchButton.tsx  ColumnTable.tsx  ContextMenu.tsx  ErrorBoundary.tsx  KeyboardShortcuts.tsx  ModalShell.tsx  NodeSearch.tsx  PolarsIcon.tsx  RenameDialog.tsx  SettingsModal.tsx  SubmodelDialog.tsx  Toast.tsx  ToggleButtonGroup.tsx  Toolbar.tsx
frontend/src/hooks/: useBackgroundJobs.ts  useClickOutside.ts  useConstraintHandlers.ts  useDataInputColumns.ts  useDragResize.ts  useEdgeHandlers.ts  useJobPolling.ts  useKeyboardShortcuts.ts  useMlflowBrowser.ts  useNodeHandlers.ts  usePipelineAPI.ts  useSchemaFetch.ts  useSubmodelNavigation.ts  useTracing.ts  (+2 more)
helpers/: __init__.py  features.py
mlruns/0/: meta.yaml
models/: Model_Training_17.cbm  catboost_sev.cbm  conversion.rsglm  modelling_8.rsglm  sev.cbm  train.cbm
modules/: model_scoring.py  model_soring.py  modelling_set.py
my_project/pipelines/: main.py
output/: severity.parquet
pipelines/: main.py  my_pipeline.haute.json  my_pipeline.json  my_pipeline.py  my_pipeline.runw.json
pipelines/data/: exposure.parquet
pipelines/models/: model.cbm
prompts/: deep_code_review.md  quote_feature_extractor.md
rating/: main.haute.json  main.py
rating/models/: Model_Training_11.rsglm
rating/outputs/: conversion_data.parquet
rating/utility/: features.py
review/: 00_summary.md  01_security.md  02_bugs_and_correctness.md  03_dry_violations_backend.md  04_dry_violations_frontend.md  05_architecture_and_complexity.md  06_test_infrastructure.md  07_performance.md  08_error_handling.md
scripts/: preflight.sh
src/haute/: __init__.py  _builders.py  _cache.py  _config_io.py  _config_validation.py  _databricks_io.py  _execute_lazy.py  _fingerprint_cache.py  _flatten.py  _git.py  _io.py  _json_flatten.py  _logging.py  _lru_cache.py  _mlflow_io.py  _mlflow_utils.py  _model_scorer.py  _node_builder.py  _optimiser_io.py  _parser_helpers.py  _parser_regex.py  _parser_submodels.py  _polars_utils.py  _ram_estimate.py  _rating.py  _sandbox.py  _scaffold.py  _submodel_graph.py  _topo.py  _types.py  cli.py  codegen.py  discovery.py  executor.py  graph_utils.py  parser.py  pipeline.py  schemas.py  server.py  trace.py
src/runw/: __init__.py  cli.py  codegen.py  executor.py  graph_utils.py  parser.py  pipeline.py  server.py  trace.py
test_quotes/: edge_cases.json  single_policy.json
tests/: _deploy_helpers.py  _git_helpers.py  conftest.py  test_adversarial_inputs.py  test_ave.py  test_banding.py  test_bug_regressions.py  test_bugfixes.py  test_charts.py  test_checkpoint_projection.py  test_cli.py  test_cli_deploy.py  test_cli_helpers.py  test_cli_impact.py  test_cli_lint.py  test_cli_serve.py  test_cli_smoke.py  test_cli_status.py  test_cli_train.py  test_codegen.py  test_codegen_builders.py  test_codegen_injection.py  test_config_io.py  test_config_validation.py  test_container.py  test_databricks_cache.py  test_databricks_endpoints.py  test_databricks_io.py  test_deploy.py  test_deploy_config.py  test_deploy_container.py  test_deploy_dispatch.py  test_deploy_internals.py  test_deploy_utils.py  test_dry_fixes.py  test_dry_refactors.py  test_e2e.py  test_error_detail_sanitization.py  test_execute_lazy.py  test_executor.py  (+67 more)
tests/fixtures/: pipeline.py
tests/quotes/: batch_policies.json
(+311 files in other folders)
