[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runw"
version = "0.1.0"
description = "Open-source pricing engine for insurance teams on Databricks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "pydantic>=2.10.0",
    "polars>=1.0.0",
    "click>=8.1.0",
    "python-multipart>=0.0.18",
    "libcst>=1.8.6",
    "watchfiles>=1.1.1",
]

[project.optional-dependencies]
databricks = [
    "mlflow>=2.15.0",
    "databricks-sdk>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[project.scripts]
runw = "runw.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/runw"]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
