[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haute"
version = "0.1.24"
description = "Haute - Open-source pricing engine for insurance teams"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "pydantic>=2.10.0",
    "polars>=1.0.0",
    "click>=8.1.0",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.0",
    "libcst>=1.8.6",
    "watchfiles>=1.1.1",
    "catboost>=1.2.8",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
databricks = [
    "mlflow>=2.15.0",
    "databricks-sdk>=0.30.0",
    "databricks-sql-connector>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
    "haute[databricks]",
]

[project.scripts]
haute = "haute.cli:cli"

[tool.hatch.build]
artifacts = ["src/haute/static/**"]

[tool.hatch.build.targets.sdist]
exclude = [
    "frontend/",
    "docs/",
    "examples/",
    "tests/",
    "pipelines/",
    "my_project/",
    "output/",
    ".env.example",
    ".python-version",
    "haute.toml",
    "uv.lock",
    "ARCHITECTURE.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/haute"]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/haute/schemas.py" = ["N815"]  # camelCase fields match frontend JSON API

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["tests/", "docs/"]

[[tool.mypy.overrides]]
module = [
    "catboost.*",
    "joblib.*",
    "mlflow.*",
    "watchfiles.*",
    "libcst.*",
    "databricks.*",
    "pyarrow.*",
]
ignore_missing_imports = true
