[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haute"
version = "0.3.0"
description = "Haute - Open-source pricing engine for insurance teams"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
authors = [
    { name = "Pricing Frontier" },
]
keywords = ["pricing", "insurance", "actuarial", "rating-engine", "catboost", "polars"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://haute.dev"
Repository = "https://github.com/PricingFrontier/haute"
Documentation = "https://haute.dev"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "pydantic>=2.10.0",
    "polars>=1.0.0",
    "click>=8.1.0",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.0",
    "libcst>=1.8.6",
    "watchfiles>=1.1.1",
    "catboost>=1.2.8",
    "structlog>=24.1.0",
    "orjson>=3.9.0",
    "price-contour==0.2.7",
    "rustystats>=0.6.1",
]

[project.optional-dependencies]
databricks = [
    "mlflow>=2.15.0",
    "databricks-sdk>=0.30.0",
    "databricks-sql-connector>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
    "haute[databricks]",
    "hypothesis>=6.151.9",
]

[project.scripts]
haute = "haute.cli:cli"

[tool.hatch.build]
artifacts = ["src/haute/static/**"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "frontend/",
    "docs/",
    "examples/",
    "tests/",
    "pipelines/",
    "my_project/",
    "output/",
    ".env.example",
    ".python-version",
    "haute.toml",
    "uv.lock",
    "ARCHITECTURE.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/haute"]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/haute/schemas.py" = ["N815"]  # camelCase fields match frontend JSON API

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/haute"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["tests/", "docs/"]

[[tool.mypy.overrides]]
module = [
    "catboost.*",
    "joblib.*",
    "mlflow.*",
    "watchfiles.*",
    "libcst.*",
    "databricks.*",
    "pyarrow.*",
    "pandas.*",
    "sklearn.*",
    "price_contour.*",
]
ignore_missing_imports = true
